# boostpy

./: CMakeLists.txt  setup.py
boostpy/: __init__.py
include/: eigenpy.h
src/: boostpy.cpp  eigenpy.cpp
